# borrowck_sacrifices

./: Cargo.toml  README.md
src/: lib.rs  splittable_container.rs  unsafe_casts.rs
