[package]
name = "borrowck_sacrifices"
version = "0.1.0"
edition = "2021"

description = "Necessary sacrifices to keep the Borrow Checker happy and developers sane."
license = "MIT"
repository = "https://github.com/alexpyattaev/borrowck_sacrifices"
documentation = "https://docs.rs/borrowck_sacrifices"
keywords = ["unsafe", "borrow", "mutable"]
categories = ["rust-patterns"]
readme="README.md"

[dependencies]
